--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,9 @@
     
     <style name="Banner">
         <item name="android:textSize">30sp</item>
-        <item name="android:textColor">#ffe08040</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:paddingLeft">4dp</item>
+        <item name="android:background">#66ffffff</item>
         </style>
     
     <style name="Scores">
